# netlist_generator

./: Cargo.toml  bench.py  bench.txt  bench2txt
.cargo/: config.toml
benches/: bench.rs  bench2.rs  bench3.rs
src/: address.rs  argparse.rs  fileops.rs  lib.rs  main.rs
tests/: test_resize.rs
