[package]
name = "netlist-generator"
version = "0.2.0"
authors = ["Alexander Barannikov <japdubengsub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
encoding_rs = "0.8.26"
encoding_rs_io = "0.1.7"
#ipnetwork = "0.16.0"
ipnet = "2.3.0"
#color-backtrace = "0.3.0"

[profile.dev]
opt-level = 0
#opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16  # Note: ignored because `incremental` is enabled.
rpath = false

[profile.release]
opt-level = 3
debug = false
rpath = false
#lto = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = false

[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
#panic = 'unwind'    # This setting is always ignored.
incremental = true
codegen-units = 16  # Note: ignored because `incremental` is enabled.
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
#panic = 'unwind'    # This setting is always ignored.
incremental = false
codegen-units = 16
rpath = false

